<resources>
    <string name="app_name">StockSense.</string>
    <string name="title_activity_error_page">errorPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="bannerIDtest">ca-app-pub-3940256099942544/6300978111</string> <!-- Test AdMob Banner -->
    <string name="bannerID">ca-app-pub-9534797608454346/1360206480</string> <!-- Real AdMob Banner -->
    <string name="interstitialIDtest">"ca-app-pub-3940256099942544/1033173712"</string> <!-- Test AdMob Interstitial -->
    <string name="interstitialID">ca-app-pub-9534797608454346/1015649609</string> <!-- Real AdMob Interstitial -->
    <string name="na">n/a</string>
    <string name="previous">Previous</string>
    <string name="profileTxt">
        We get your personal information from the register process. If you want to make changes on your personal information, contact our support.
    </string>
    <string name="warningtxt">
        This includes your username, password, email address, profile information, and any content you have created or shared.
    </string>

    <string name="searchDoc1">The stock search with exchange selection feature allows users of the stock prediction Android app to search for stock details from Yahoo servers. Users can specify the desired stock exchange using radio buttons, which dynamically modifies the searchinput before fetching the data. The supported stock exchanges are NSE (National Stock Exchange) and BSE (Bombay Stock Exchange).</string>
    <string name="searchDoc2">On the search page of the app, users will find the following elements:\n1. Search Bar: A text input field where users can enter the stock symbol or company name they want to search for.\n2. Radio Buttons: Three radio buttons representing the available stock exchange options:\n\t\t\ta. NSE: National Stock Exchange\n\t\t\tb. BSE: Bombay Stock Exchange\n3. Manual: Allows users to search without specifying any exchange</string>
    <string name="searchDoc3">The section has functionalities as defined below:\n1. Retrieving User Input:\n\t\t• The app retrieves the user\'s input from the search bar when the search action is triggered.\n2. Stock Exchange Selection:\n\t\t• Users can select one of the three available stock exchanges using the radio buttons.\n\t\t• The selected stock exchange determines the extension that will be appended to the search input.\n3. Modifying Search Input:\n\t\t• Based on the selected stock exchange, the app modifies the search input as follows:\n\t\t\t\t• If NSE is selected, the ".NS" extension is appended to the search input.\n\t\t\t\t• If BSE is selected, the ".BO" extension is appended to the search input.\n\t\t\t\t• If Manual is selected, no modification is made to the search input.</string>
    <string name="help">Welcome to StockSense, your ultimate companion for discovering and organizing your favorite content! With our innovative homepage, we\'ve designed a seamless experience that puts the power of search and personalization right at your fingertips.</string>
    <string name="helpDoc2">Introducing the powerful search feature of our app, which brings you seamless access to a vast array of financial data and resources.Say goodbye to endless scrolling and wasting time – with StockSense, finding what you want has never been easier. With our intuitive interface, you can effortlessly explore and retrieve information from three distinct sections: NSE, BSE, and Manual search.\n1. NSE: Stay up-to-date with the latest stock market trends and dive into the National Stock Exchange (NSE) section of our app. Instantly search for company stocks, indices, and market data to make informed investment decisions. Our comprehensive database ensures you have access to real-time prices, historical data, and key financial indicators right at your fingertips.Here in this section you have to search only the symbols of the stocks.\n2. BSE: Explore the Bombay Stock Exchange (BSE) section of our app to delve into a wealth of financial information. From stock prices and market news to company profiles and historical performance, our BSE search feature equips you with the insights you need to navigate the dynamic world of finance. Stay informed and make smarter investment choices.3. Manual: Take control of your search experience with our Manual section. </string>
    <string name="helpDoc3">Create your personalized watchlist with just a tap! Simply add your favourite stocks and you can visit the prediction page just in one tap.Then from the prediction page one can add any particular stock in the watchlist by tapping on watchlist icon. Your watchlist, tailored to your unique stock tastes, all in one place.</string>
    <string name="dataDocs3">
    </string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_stock_detail">stockDetail</string>
</resources>