<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bg_main"
    android:layout_height="match_parent"
    tools:context=".help_support">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarsearchDocs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarPred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/backHelp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_arrow_back_ios_new_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="@font/titilliumweb_semi_bold"
                    android:text="Help and Support"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/dashboard_white_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbarsearchDocs">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/helpDoc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintTop_toTopOf="parent"/>

                <View
                    android:id="@+id/dashed2"
                    android:layout_width="90dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight=".3"
                    android:background="@drawable/dashed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/helpDoc1" />

                <TextView
                    android:id="@+id/helpDoc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/helpDoc2"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintTop_toBottomOf="@id/dashed2"/>

                <View
                    android:id="@+id/dashed"
                    android:layout_width="90dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight=".3"
                    android:background="@drawable/dashed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/helpDoc2" />

                <TextView
                    android:id="@+id/helpDoc3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/helpDoc3"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintTop_toBottomOf="@id/dashed"/>

                <View
                    android:id="@+id/dashed4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/dashed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/helpDoc3" />

                <TextView
                    android:id="@+id/helpDoc4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="For help and feedback mail us at rohnsha0@gmail.com"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintTop_toBottomOf="@id/dashed4"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    app:layout_constraintTop_toBottomOf="@id/helpDoc4"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>